Sun 03 Jan 2021 Aleksey
	* Bugfix: fix computing of EDON-R 512 by big data chunks

Thu 24 Dec 2020 Aleksey
	* support --no-detect-by-ext option
	* speed up verification by detecting hash type from file extension

Sun 06 Dec 2020 Aleksey
	* Bugfix: correctly print long paths on Windows

Sun 22 Nov 2020 Aleksey
	* Bugfix: print correct '%{mtime}' when --file-list is specified

Sat 29 Aug 2020 Theodore Ts'o
	* Bugfix: only follow symbolic links when --follow is specified

Wed 22 Jul 2020 Aleksey
	* Bugfix: fix buffer overflow in GOST12

Tue 14 Jul 2020 Aleksey
	* === Version 1.4.0 ===

Sat 11 Jul 2020 Aleksey
	* librhash: supported rhash_get_version() - get library version

Mon 29 Jun 2020 Aleksey
	* Bugfix: fix broken output on Win 7

Sun 19 Apr 2020 Alexey Dokuchaev, Aleksey
	* Bugfix: fix broken 'configure --localedir=<dir>' option

Fri 14 Feb 2020 Fabrice Fontaine
	* Bugfix: fix broken makefile install-so-link target

Tue 07 Jan 2020 Aleksey
	* Bugfix: restore behavior of 'rhash -rc' to be the same as in v1.3.8
	* Bugfix: fix a segfault and memory errors

Sat 14 Dec 2019 Aleksey
	* === Version 1.3.9 ===

Sun 08 Dec 2019 Aleksey
	* add uk translations

Thu 28 Nov 2019 Aleksey
	* change project license to BSD Zero Clause License

Mon 18 Nov 2019 Aleksey
	* new printf-format modifier '%u' to print url-encoded filename, path or hash

Fri 15 Nov 2019 Aleksey
	* Bugfix: btih in magnet links shall be hex-encoded

Tue 12 Nov 2019 Aleksey
	* correctly align UTF8 file paths, while printing verification results
	* respect UTF8 BOM when updating or verifying a hash file

Thu 17 Oct 2019 Aleksey
	* print a new-line after ed2k link, when --ed2k-link option is passed

Mon 14 Oct 2019 Aleksey
	* exit on output errors with exit_code = 2
	* change option --update=<file> to update the specified file

Sun 29 Sep 2019 Aleksey
	* make short option '-P' to be an alias for --percents

Tue 02 Jul 2019 Aleksey
	* change %{mtime} format to 'YYYY-MM-DD hh:mm:ss'

Wed 26 Jun 2019 Aleksey